# music-theory-visualizer

./: Makefile  README.md  fingerboard.py  main.py  n_circles.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
