[project]
name = "music-theory-visualizer"
version = "0.1.0"
description = "Music theory visualizer"
readme = "README.md"
authors = [{name = "inaba1115", email = "inaba1115@gmail.com"}]
requires-python = ">=3.13"
dependencies = [
    "hyperscore>=0.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
    "ty>=0.0.40",
]

[tool.ruff.lint]
extend-select = ["I", "RUF", "UP", "TID", "C", "SIM", "PTH"]
extend-ignore = ["C901", "F401", "F403", "E722", "RUF007", "RUF059", "F405"]
